## 🎉 Fish Audio Integration Complete!
I've successfully integrated **Fish Audio** as a full alternative TTS provider to Coqui TTS in your VoxDub system. Here's what was implemented:

---

### ✅ **What Was Done**

#### 1. **Enhanced Voice Synthesis Module** (`backend/models/voice_synthesis.py`)
- **FishAudioSynthesizer**: New class with Fish Audio SDK integration
  - Cloud-based TTS with API key authentication
  - Support for voice cloning with reference IDs
  - Speed and volume controls
  - Account info and credit tracking

- **CoquiVoiceSynthesizer**: Renamed existing class for clarity
  - Maintains all original Coqui functionality
  - Local processing with GPU support

- **VoiceSynthesizer**: Unified wrapper class
  - Auto-selects provider (prefers Fish Audio if configured)
  - Manual provider selection: `auto`, `fish_audio`, `coqui`
  - Seamless switching between providers
  - Automatic fallback if Fish Audio unavailable

#### 2. **Updated Backend API** (`backend/app.py`)
- **New Endpoints:**
  - `GET /api/tts/providers` - List available providers and current selection
  - `POST /api/tts/provider` - Set global TTS provider preference

- **Enhanced Endpoints:**
  - `GET /api/health` - Now shows current TTS provider info
  - `POST /api/dub` - Accepts optional `tts_provider` parameter

- **Process Tracking:**
  - Jobs now store which TTS provider was used
  - Source language detection added to job data

#### 3. **Dependencies** (`backend/requirements.txt`)
- Added `fish-audio-sdk>=1.0.0` with installation notes

#### 4. **Configuration** (`.env.example`)
- Added `FISH_API_KEY` environment variable
- Added `TTS_PROVIDER` preference setting
- Documented provider options and setup

#### 5. **Comprehensive Documentation** (`FISH_AUDIO_INTEGRATION.md`)
- **45+ sections** covering:
  - Installation and setup
  - API endpoints and usage
  - Programming examples (Python & JavaScript)
  - Advanced features (voice cloning, speed/volume control)
  - Performance comparison tabl

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,15 @@ WHISPER_MODEL=base
 NLLB_MODEL=facebook/nllb-200-distilled-600M
 TTS_MODEL=tts_models/multilingual/multi-dataset/your_tts
 
+# TTS Provider Configuration
+# Options: auto (auto-select), fish_audio (Fish Audio TTS), coqui (Coqui TTS)
+TTS_PROVIDER=auto
+
+# Fish Audio TTS Configuration (Optional)
+# Get your API key at: https://fish.audio/app/api-keys
+# Required only if using Fish Audio TTS provider
+FISH_API_KEY=your-fish-audio-api-key-here
+
 # File Configuration
 MAX_FILE_SIZE_MB=500
 ALLOWED_FORMATS=mp4,avi,mov,mkv
