Perfect! Now let me create a comprehensive summary of what was accomplished:
## Summary

I've successfully integrated **Fish Speech (OpenAudio S1) TTS API** into VoxDub with complete support for all requested features. Here's what was implemented:

### ✅ Completed Tasks

#### 1. **Dependencies & Configuration**
- Added Fish Speech dependencies to `requirements.txt`
- Updated `.env.example` with comprehensive Fish Speech configuration options
- Configured model selection (S1 vs S1-mini), device settings, and inference parameters

#### 2. **Provider Architecture**
Created a flexible, pluggable TTS provider system:
- **Base Provider Interface** (`base.py`) - Abstract class for all TTS providers
- **Coqui Provider** (`coqui_provider.py`) - Wrapped existing TTS as a provider
- **Fish Speech Provider** (`fish_speech_provider.py`) - Full implementation with:
  - Voice cloning support
  - Emotion synthesis (10+ emotions)
  - Streaming and non-streaming modes
  - Reference audio management

#### 3. **Core Integration**
- Refactored `voice_synthesis.py` to support multiple providers
- Environment-based provider selection
- Backward compatible with existing code
- Fish Speech specific methods for voice cloning and emotions

#### 4. **API Endpoints**
Created comprehensive REST API in `routers/fish_speech.py`:
- **Info Endpoints**: `/info`, `/health`, `/emotions`
- **Voice Management**: `/voices/add`, `/voices/list`, `/voices/{id}` (DELETE)
- **Synthesis**: `/synthesize`, `/clone-voice`, `/download/{id}`
- All with proper error handling and documentation

#### 5. **Installation & Setup**
Created `setup_fish_speech.sh` automated installer that:
- Checks system requirements
- Clones and installs Fish Speech
- Downloads model weights (S1 or S1-mini)
- Creates API configuration
- Sets up systemd service (optional)
- Generates startup scripts

#### 6. **Documentation**
- **FISH_SPEECH_INTEGRATION.md** - Comprehensive 400+ line guide
- **FISH_SPEECH_QUICKSTART.md** - Quick start in un

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,20 @@ WHISPER_MODEL=base
 NLLB_MODEL=facebook/nllb-200-distilled-600M
 TTS_MODEL=tts_models/multilingual/multi-dataset/your_tts
 
+# TTS Provider Selection
+TTS_PROVIDER=coqui  # Options: coqui, fish_speech
+
+# Fish Speech Configuration
+FISH_SPEECH_ENABLED=True
+FISH_SPEECH_MODEL=s1-mini  # Options: s1, s1-mini
+FISH_SPEECH_API_URL=http://localhost:8080
+FISH_SPEECH_DEVICE=cuda  # Options: cuda, cpu
+FISH_SPEECH_COMPILE=False  # Enable torch.compile for faster inference
+FISH_SPEECH_MAX_NEW_TOKENS=1024
+FISH_SPEECH_TOP_P=0.7
+FISH_SPEECH_TEMPERATURE=0.7
+FISH_SPEECH_REPETITION_PENALTY=1.2
+
 # File Configuration
 MAX_FILE_SIZE_MB=500
 ALLOWED_FORMATS=mp4,avi,mov,mkv
